--- a/_publications/2021_TCNS.md
+++ b/_publications/2021_TCNS.md
@@ -1,8 +1,8 @@
 ---
 title: "A distributed stochastic proximal-gradient algorithm for composite optimization"
 collection: publications
-category: manuscripts
 permalink: /publication/2021_TCNS
+lable: 2021_TCNS
 excerpt: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lü, Dawen Xia, and Lianghao Ji'
 date: 2021-3-11
 venue: 'IEEE Transactions on Control of Network Systems'
