--- a/_publications/c_2023_CDC.md
+++ b/_publications/c_2023_CDC.md
@@ -2,7 +2,7 @@
 title: "A Loopless Distributed Algorithm for Personalized Bilevel Optimization"
 collection: publications
 permalink: /publications/c_2023_CDC
-label: c_2023_CDC_Youcheng
+label: c_2023_CDC
 excerpt: 'Youcheng Niu, Ying Sun, Yan Huang and Jinming Xu'
 date: 2023-12-13
 venue: '2023 IEEE 62nd Conference on Decision and Control (CDC)'
