--- a/_publications/2021_TCNS.md
+++ b/_publications/2021_TCNS.md
@@ -2,8 +2,9 @@
 title: "A distributed stochastic proximal-gradient algorithm for composite optimization"
 collection: publications
 permalink: /publication/2021_TCNS
+category: manuscripts
 lable: 2021_TCNS
-excerpt: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lü, Dawen Xia, and Lianghao Ji'
+excerpt: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lu, Dawen Xia, and Lianghao Ji'
 date: 2021-3-11
 venue: 'IEEE Transactions on Control of Network Systems'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/9376267'
