--- a/_publications/2019_JFI.md
+++ b/_publications/2019_JFI.md
@@ -2,6 +2,7 @@
 title: "Primal-dual stochastic distributed algorithm for constrained convex optimization"
 collection: publications
 permalink: /publications/2019_JFI
+category: manuscripts
 label: 2019_JFI
 excerpt: 'Youcheng Niu, Haijing Wang, Zheng Wang,Dawen Xia, and Huaqing Li'
 date: 2019-9-9
