--- a/_publications/2021_TCNS.md
+++ b/_publications/2021_TCNS.md
@@ -8,7 +8,7 @@ excerpt: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lu, Dawen Xia, and Liang
 date: 2021-3-11
 venue: 'IEEE Transactions on Control of Network Systems'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/9376267'
-citation: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lü, Dawen Xia, and Lianghao Ji'
+authors: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lü, Dawen Xia, and Lianghao Ji'
 ---
 
 Abstract: In this article, we consider distributed composite optimization problems involving a common non-smooth regularization term over an undirected and connected network. 
