--- a/_publications/2021_TCNS.md
+++ b/_publications/2021_TCNS.md
@@ -3,7 +3,7 @@ title: "A distributed stochastic proximal-gradient algorithm for composite optim
 collection: publications
 permalink: /publication/2021_TCNS
 category: manuscripts
-lable: 2021_TCNS
+label: 2021_TCNS
 excerpt: 'Youcheng Niu, Huaqing Li, Zheng Wang, Qingguo Lu, Dawen Xia, and Lianghao Ji'
 date: 2021-3-11
 venue: 'IEEE Transactions on Control of Network Systems'
